vlib/v/parser/tests/fn_decl_params_missing_comma_single_line_err.vv
fn greet(salutation string name string) {}
